--- a/index.html
+++ b/index.html
@@ -90,12 +90,11 @@
             <div class="alt-row">
                 <div class="card-block section">
                     <h3 class="card-heading">5. No Matter What</h3>
-                    <blockquote>“Every test stitched resilience through the quiet parts.”</blockquote>
+                    <blockquote>“To love even if it feels like everything is against you, is the purest for of love.”</blockquote>
                     <p class="micro-note">Micro-moment #25 — To fight through regardless.</p>
                 </div>
                 <div class="text-block">
-                    <p>Future = continuation plus small reinventions.</p>
-                    <p>We prototype better ways to rest and celebrate.</p>
+                    <p>Each month passes, and every single time, we just fall in love deeper with each other. I choose to love you everyday, because to love you from the start means my love never gets deeper as time passes.</p>
                 </div>
             </div>
             <div class="alt-row">
