possible final update

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="alt-row">
                 <div class="card-block section">
                     <h3 class="card-heading">5. No Matter What</h3>
-                    <blockquote>“To love even if it feels like everything is against you, is the purest for of love.”</blockquote>
+                   <blockquote>“To love even if it feels like everything is against you, is the purest for of love.”</blockquote>
                     <p class="micro-note">Micro-moment #25 — To fight through regardless.</p>
                 </div>
                 <div class="text-block">
@@ -109,6 +109,21 @@
             </div>
         </div>
     </main>
+    <div class="love-note small-fade" role="note">And my darling, it's not only me who loves you, look around you. It's <strong>us</strong>.</div>
+    <section class="message-carousel" aria-labelledby="messagesHeading" role="group" aria-roledescription="Carousel">
+        <h2 id="messagesHeading" class="visually-hidden">Messages from Others</h2>
+        <button class="mc-arrow mc-prev" type="button" aria-label="Previous message" disabled>&larr;</button>
+        <div class="mc-viewport" aria-live="polite" aria-atomic="true">
+            <div class="mc-stage">
+                <article class="mc-slide active" data-index="0" tabindex="0">
+                    <p class="mc-message">Loading messages...</p>
+                    <p class="mc-meta" aria-hidden="true">Please wait</p>
+                </article>
+            </div>
+        </div>
+        <button class="mc-arrow mc-next" type="button" aria-label="Next message">&rarr;</button>
+        <div class="mc-dots" role="tablist" aria-label="Select message"></div>
+    </section>
     <footer class="site-footer" role="contentinfo">
         <p>Created by <span class="author-name">Miguel</span></p>
     </footer>
