why did i have to commit this separately

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="alt-row">
                 <div class="card-block section">
                     <h3 class="card-heading">5. No Matter What</h3>
-                   <blockquote>“To love even if it feels like everything is against you, is the purest for of love.”</blockquote>
+                   <blockquote>“To love even if it feels like everything is against you, is the purest form of love.”</blockquote>
                     <p class="micro-note">Micro-moment #25 — To fight through regardless.</p>
                 </div>
                 <div class="text-block">
